# go-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake.yaml  dependency-cache.yaml  msvc-analysis.yaml
go-gui/source/: main.cpp
go/source/: main.cpp
goimpl/include/goimpl/: Board.hpp  Chain.fwd.hpp  Chain.hpp  ConsoleUI.hpp  GameController.hpp  IPlayer.hpp  Player.hpp  Player.tpp  Point.hpp  std.fwd.hpp
goimpl/source/: Board.cpp  Chain.cpp  ConsoleUI.cpp  GameController.cpp  Logger.cpp  Point.cpp  Stone.cpp
goimpl/tests/: Point-tests.cpp  Stone-tests.cpp
scratch/: Board.cpp  Board.hpp  Chain.cpp  Chain.hpp  ConsoleUI.cpp  ConsoleUI.hpp  GameController.cpp  GameController.hpp  Logger.hpp  Player.hpp  Player.tpp  Point.cpp  Point.hpp  Stone.cpp  Stone.hpp  main.cpp
source/: Board.cpp  Board.hpp  Chain.cpp  Chain.hpp  ConsoleUI.cpp  ConsoleUI.hpp  GameController.cpp  GameController.hpp  IPlayer.hpp  Logger.cpp  Logger.hpp  Player.hpp  Player.tpp  Point.cpp  Point.fwd.hpp  Point.hpp  Stone.cpp  Stone.fwd.hpp  Stone.hpp  main.cpp
source/go-cpp11/: Board.cpp  Board.fwd.hpp  Board.hpp  Chain.cpp  Chain.fwd.hpp  Chain.hpp  ConsoleUI.cpp  ConsoleUI.hpp  GameController.cpp  IPlayer.hpp  Logger.hpp  Player.fwd.hpp  Player.hpp  Player.tpp  Point.cpp  Point.fwd.hpp  Point.hpp  Stone.cpp  Stone.fwd.hpp  Stone.hpp  std.fwd.hpp
tests/: Point-tests.cpp  Stone-tests.cpp
